# BifrostFileIO

./: .gitignore  CMakeLists.txt  README.md  build.py
src/: CMakeLists.txt  PackConfig.json.in  bifrost_file_io_export.h  bifrost_file_io_runtime_exception.cpp  bifrost_file_io_runtime_exception.h  bifrost_json.cpp  bifrost_json.h  filesystem.cpp  filesystem.h  filesystem_io.cpp  filesystem_io.h  header_macros.h  json_to_bif_obj.cpp  json_to_bif_obj.h  parse_access_expr.cpp  parse_access_expr.h
src/compounds/: CMakeLists.txt  create_access_expr.json  get_with_access_expr.json  get_with_access_expr_internal.json  number_to_access_expr.json  read_file_cached.json  read_from_filesystem_cached.json  read_json_cached.json  set_array_chaining_info.json  set_with_access_expr.json
src/resources/: CMakeLists.txt
src/resources/docs/: CMakeLists.txt  read_file.md  read_file_cached.md  read_from_filesystem.md  read_from_filesystem_cached.md  read_json.md  write_file.md
